2012-12-03 Gustavo Sverzut Barbieri (k-s)

	* Add elm_need_edbus(), deprecate elm_need_e_dbus(), integrating
	edbus (v2).

2012-04-26 Carsten Haitzler (The Rasterman)

        * 1.0.0 release

2012-04-27 Daniel Juyung Seo (SeoZ)

        * Genlist : Fixed genlist expandable effect bug when we expand/contract
          items with many children very quickly.
        * Genlist : Realize move items during tree effect only when the item is
          not in the queue.

2012-04-30 Jérôme Pinot

        * Add missing files in the tarballs.

2012-05-02  Cedric Bail

        * Do less allocation and reuse much more Evas_Map.

2012-05-02 Carsten Haitzler (The Rasterman)

        * Fix possible problems with other subsystems depending on X11 display
          being closed (XCloseDisplay not close() on socket fd).

2012-05-02  ChunEon Park (Hermet)

        * Font: actually it doesnt append the font to the hash when font_hash is
          created inside. Now it is fixed.

2012-05-03  WooHyun Jung

        * Add feature about focus. Focus can be moved in all direction by
          by elm_widget_focus_go function.

2012-05-04  Leandro Pereira

        * Fix icon not appearing in default Genlist theme.

2012-05-09  Cedric bail

        * Reload theme when it change on disk.

2012-05-11  ShilpaOnkar Singh

        * Added focus key event handling for the colorselector

2012-05-13  Dave Andreoli

        * Fileselector: honor folder_only when using EIO

2012-05-14  Shinwoo Kim

        * menu: remove crash issue when no-parent item is passed to the
        elm_menu_item_separator_add()

2012-05-14  Shinwoo Kim (kimcinoo)

        * popup: Bug Fix: improper usage of textblock

2012-05-15  Dave Andreoli

        * Fileselector: honor folder_only when using EIO

2012-05-16 Carsten Haitzler (The Rasterman)

        * Fix genlist ELM_LIST_LIMIT mode to do what it originally did.
          Documentation was wrong too and code had a slight bug stopping